--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "localforage": "^1.10.0",
+    "lucide": "^0.263.0",
+    "lucide-react": "^0.263.1",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
