--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "localforage": "^1.10.0",
     "lucide": "^0.263.0",
     "lucide-react": "^0.263.1",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
