--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
